Make use of various fastutils collection implementations