@@ -1,8 +1,9 @@
 package moze_intel.projecte.emc;
 
-import com.google.common.collect.ImmutableMap;
-import java.util.Arrays;
-import java.util.Collections;
+import it.unimi.dsi.fastutil.objects.Object2IntArrayMap;
+import it.unimi.dsi.fastutil.objects.Object2IntMap;
+import it.unimi.dsi.fastutil.objects.Object2IntMaps;
+import java.util.List;
 import java.util.Map;
 import moze_intel.projecte.api.mapper.arithmetic.IValueArithmetic;
 import moze_intel.projecte.api.mapper.collector.IExtendedMappingCollector;
@@ -23,6 +24,13 @@ class HiddenFractionSpecificTest {
 	private IValueGenerator<String, Long> valueGenerator;
 	private IExtendedMappingCollector<String, Long, IValueArithmetic<BigFraction>> mappingCollector;
 
+	private static <K> Object2IntMap<K> intMapOf(final K key, int value, final K key2, int value2) {
+		Object2IntMap<K> intMap = new Object2IntArrayMap<>(2);
+		intMap.put(key, value);
+		intMap.put(key2, value2);
+		return Object2IntMaps.unmodifiable(intMap);
+	}
+
 	@BeforeEach
 	void setup() {
 		SimpleGraphMapper<String, BigFraction, IValueArithmetic<BigFraction>> mapper = new SimpleGraphMapper<>(new HiddenBigFractionArithmetic());
@@ -36,9 +44,9 @@ class HiddenFractionSpecificTest {
 		mappingCollector.setValueBefore("s", 1L);
 		mappingCollector.setValueBefore("redstone", 64L);
 		mappingCollector.setValueBefore("glass", 1L);
-		mappingCollector.addConversion(6, "slab", Arrays.asList("s", "s", "s"));
-		mappingCollector.addConversion(1, "doubleslab", Arrays.asList("slab", "slab"));
-		mappingCollector.addConversion(1, "transferpipe", Arrays.asList("slab", "slab", "slab", "glass", "redstone", "glass", "slab", "slab", "slab"));
+		mappingCollector.addConversion(6, "slab", List.of("s", "s", "s"));
+		mappingCollector.addConversion(1, "doubleslab", List.of("slab", "slab"));
+		mappingCollector.addConversion(1, "transferpipe", List.of("slab", "slab", "slab", "glass", "redstone", "glass", "slab", "slab", "slab"));
 		Map<String, Long> values = valueGenerator.generateValues();
 		Assertions.assertEquals(1, getValue(values, "s"));
 		Assertions.assertEquals(64, getValue(values, "redstone"));
@@ -53,8 +61,8 @@ class HiddenFractionSpecificTest {
 	void nuggetExploits() {
 		mappingCollector.setValueBefore("ingot", 2048L);
 		mappingCollector.setValueBefore("melon", 16L);
-		mappingCollector.addConversion(9, "nugget", Collections.singletonList("ingot"));
-		mappingCollector.addConversion(1, "goldmelon", Arrays.asList(
+		mappingCollector.addConversion(9, "nugget", List.of("ingot"));
+		mappingCollector.addConversion(1, "goldmelon", List.of(
 				"nugget", "nugget", "nugget",
 				"nugget", "melon", "nugget",
 				"nugget", "nugget", "nugget"
@@ -74,8 +82,8 @@ class HiddenFractionSpecificTest {
 		mappingCollector.setValueBefore("bucket", 768L);
 
 		//Conversion using mili-milibuckets to make the 'emc per milibucket' smaller than 1
-		mappingCollector.addConversion(250 * 1000, "moltenEnder", Collections.singletonList("enderpearl"));
-		mappingCollector.addConversion(1, "moltenEnderBucket", ImmutableMap.of("moltenEnder", 1000 * 1000, "bucket", 1));
+		mappingCollector.addConversion(250 * 1000, "moltenEnder", List.of("enderpearl"));
+		mappingCollector.addConversion(1, "moltenEnderBucket", intMapOf("moltenEnder", 1000 * 1000, "bucket", 1));
 
 		Map<String, Long> values = valueGenerator.generateValues();
 		Assertions.assertEquals(1024, getValue(values, "enderpearl"));
@@ -92,12 +100,12 @@ class HiddenFractionSpecificTest {
 		mappingCollector.setValueBefore("bucket", 768L);
 
 		//Conversion using milibuckets with a "don't round anything down"-arithmetic
-		mappingCollector.addConversion(250, "moltenEnder", Collections.singletonList("enderpearl"), fullFractionArithmetic);
-		mappingCollector.addConversion(1, "moltenEnderBucket", ImmutableMap.of("moltenEnder", 1000, "bucket", 1));
+		mappingCollector.addConversion(250, "moltenEnder", List.of("enderpearl"), fullFractionArithmetic);
+		mappingCollector.addConversion(1, "moltenEnderBucket", intMapOf("moltenEnder", 1000, "bucket", 1));
 
 		//Without using the full fraction arithmetic
-		mappingCollector.addConversion(250, "moltenEnder2", Collections.singletonList("enderpearl"));
-		mappingCollector.addConversion(1, "moltenEnderBucket2", ImmutableMap.of("moltenEnder2", 1000, "bucket", 1));
+		mappingCollector.addConversion(250, "moltenEnder2", List.of("enderpearl"));
+		mappingCollector.addConversion(1, "moltenEnderBucket2", intMapOf("moltenEnder2", 1000, "bucket", 1));
 
 		Map<String, Long> values = valueGenerator.generateValues();
 		Assertions.assertEquals(1024, getValue(values, "enderpearl"));
@@ -112,12 +120,12 @@ class HiddenFractionSpecificTest {
 	void reliquaryVials() {
 		mappingCollector.setValueBefore("glass", 1L);
 
-		mappingCollector.addConversion(16, "pane", ImmutableMap.of("glass", 6));
-		mappingCollector.addConversion(5, "vial", ImmutableMap.of("pane", 5));
+		mappingCollector.addConversion(16, "pane", Object2IntMaps.singleton("glass", 6));
+		mappingCollector.addConversion(5, "vial", Object2IntMaps.singleton("pane", 5));
 		//Internal EMC of pane and vial: 3/8 = 0.375
 		//So 8 * vial should have an emc of 3 => testItem should have emc of 1
-		mappingCollector.addConversion(3, "testItem1", ImmutableMap.of("pane", 8));
-		mappingCollector.addConversion(3, "testItem2", ImmutableMap.of("vial", 8));
+		mappingCollector.addConversion(3, "testItem1", Object2IntMaps.singleton("pane", 8));
+		mappingCollector.addConversion(3, "testItem2", Object2IntMaps.singleton("vial", 8));
 
 		Map<String, Long> values = valueGenerator.generateValues();
 		Assertions.assertEquals(1, getValue(values, "glass"));
@@ -132,9 +140,9 @@ class HiddenFractionSpecificTest {
 	void propagation() {
 		mappingCollector.setValueBefore("a", 1L);
 
-		mappingCollector.addConversion(2, "ahalf", ImmutableMap.of("a", 1));
-		mappingCollector.addConversion(1, "ahalf2", ImmutableMap.of("ahalf", 1));
-		mappingCollector.addConversion(1, "2ahalf2", ImmutableMap.of("ahalf2", 2));
+		mappingCollector.addConversion(2, "ahalf", Object2IntMaps.singleton("a", 1));
+		mappingCollector.addConversion(1, "ahalf2", Object2IntMaps.singleton("ahalf", 1));
+		mappingCollector.addConversion(1, "2ahalf2", Object2IntMaps.singleton("ahalf2", 2));
 
 		Map<String, Long> values = valueGenerator.generateValues();
 		Assertions.assertEquals(1, getValue(values, "a"));
